gcc/testsuite/rust/rustc/ui/did_you_mean/pub-macro-rules.rs
#[macro_use] mod bleh {
    pub macro_rules! foo { // { dg-error "" "" { target *-*-* } }
        ($n:ident) => (
            fn $n () -> i32 {
                1
            }
        )
    }

}

foo!(meh);

fn main() {
    println!("{}", meh());
}

